--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,11 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: mysql2
+  database: gamefowlonline
+  encoding: utf8
+  username: root
+  password: codell1112
   pool: 5
   timeout: 5000
 
